💄 More UI fixes and tweaks that show better on iPhone (#25)
* :lipstick: More UI updates to do with borders and padding

* :truck: Move files around

* :lipstick: Make the font smaller and more padding fixes

* :lipstick: Ceter align the arrows

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ dl,
 dd {
   margin: 0;
   color: rgb(42, 39, 39);
+  background-color: rgb(253, 241, 217);
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
@@ -78,7 +79,6 @@ select {
 
 .App {
   text-align: center;
-  background-color: rgb(253, 241, 217);
   min-width: 100vw;
   display: flex;
   flex-direction: column;
@@ -92,7 +92,7 @@ h1 {
   font-family: "Courgette", cursive;
   color: rgb(192, 55, 51);
   font-weight: 700;
-  font-size: 4.2vh;
+  font-size: 3.8vh;
   letter-spacing: 0.1em;
   line-height: 4.4vh;
   -moz-text-fill-color: rgb(192, 55, 51);
@@ -136,24 +136,7 @@ button:focus {
   outline: none;
 }
 
-.numberCruncher {
-  display: flex;
-  flex-direction: column;
-  background: rgb(151, 213, 208);
-  border-radius: 5px;
-  min-width: 3em;
-  font: cursive;
-  font-weight: 700;
-}
-
 button {
-  border: none;
-  cursor: pointer;
-  background: none;
-  color: rgb(42, 39, 39);
-}
-
-.numberCruncher button {
   border: none;
   cursor: pointer;
   background: none;
